--- a/newAngularPlayground.html
+++ b/newAngularPlayground.html
@@ -17,6 +17,14 @@
     </ul>
     <h3>My number check:</h3>
     {{4+3}}
+    <table>
+        <tr>
+            <th>Row number</th>
+        </tr>
+        <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]">
+            <td>{{i+1}}</td>
+        </tr>
+    </table>
 
 
 </body>
